<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
			  xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  tools:context="com.hopeland.pda.example.dlt.MeterReadActivity">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/GetAddrByF1"/>


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_margin="6dp"
		android:id="@+id/view_split_main">


		<LinearLayout
			android:id="@+id/view_split_left"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:layout_margin="2dp"
				android:orientation="horizontal">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.35"
					android:text="@string/MeterAddress"/>

				<EditText
					android:id="@+id/txtMeterAddr"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.65"
					android:background="@drawable/view_rectangle_morelist_gray"
					android:inputType="textCapCharacters"
					android:text="@string/DefaultMeterAddr"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="horizontal">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.35"
					android:text="@string/MeterPort"/>

				<Spinner
					android:id="@+id/spinPort"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.65"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="horizontal">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.35"
					android:text="@string/MeterSpeed"/>

				<Spinner
					android:id="@+id/spinSpeed"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.65"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="horizontal">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.35"
					android:text="@string/MeterProtocol"/>

				<Spinner
					android:id="@+id/spinProtocol"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.65"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="horizontal">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.35"
					android:text="@string/MeterItem"/>

				<Spinner
					android:id="@+id/spinMeterItem"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.65"/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:id="@+id/view_split_right">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:layout_margin="2dp"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/lblMeterPasswd"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.35"
					android:text="@string/MeterPasswd"/>

				<EditText
					android:id="@+id/txtMeterPasswd"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.65"
					android:background="@drawable/view_rectangle_morelist_gray"
					android:inputType="textCapCharacters"
					android:text="@string/DefaultMeterPasswd"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:layout_margin="2dp"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/lblMeterOpcode"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.35"
					android:text="@string/MeterOpcode"/>

				<EditText
					android:id="@+id/txtMeterOpcode"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.65"
					android:background="@drawable/view_rectangle_morelist_gray"
					android:inputType="textCapCharacters"
					android:text="@string/DefaultMeterOpcode"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:layout_margin="2dp"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/lblMeterVal"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.35"
					android:text="@string/MeterValue"/>

				<EditText
					android:id="@+id/txtMeterVal"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.65"
					android:background="@drawable/view_rectangle_morelist_gray"
					android:inputType="textCapCharacters"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="vertical">

				<Button
					android:id="@+id/btnMeterOK"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"

					android:layout_margin="2dp"
					android:background="@drawable/button_orange"
					android:text="@string/ReadMeter">

					<requestFocus/>
				</Button>


				<Button
					android:id="@+id/btnMeterSet"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="2dp"
					android:background="@drawable/button_blue"
					android:text="@string/SettingMeter"/>

			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>