<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_margin="6dp"
		android:id="@+id/view_split_main">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:id="@+id/view_split_left">

			<!-- 匹配数据区 -->

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/tv_Write_MatchTitle"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="vertical">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/tv_Write_MatchTID"/>

				<EditText
					android:id="@+id/tb_Write_MatchTID"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/view_rectangle_morelist_gray"
					android:gravity="left|top"
					android:inputType="textMultiLine"
					android:focusable="true"
					android:focusableInTouchMode="true"
					android:maxLines="2"
					android:minLines="2"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="vertical">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/tv_Write_AccessPassword"/>

				<EditText
					android:id="@+id/tb_Access_Password"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:focusable="true"
					android:focusableInTouchMode="true"
					android:background="@drawable/view_rectangle_morelist_gray"
					android:text="@string/uhf_default_access_pwd"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="horizontal">

				<Button
					android:id="@+id/btn_Write_ReadMacthTag"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:background="@drawable/button_blue"
					android:onClick="ReadMactchTag"
					android:text="@string/btn_Write_ReadMatch"/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/view_split_right"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<!-- 写数据区 -->

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/tv_Write_WriteTitle"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="horizontal">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.3"
					android:text="@string/tv_Write_WriteType"/>

				<Spinner
					android:id="@+id/sp_Write_WriteType"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.7"
					android:entries="@array/Array_WriteType"
					android:prompt="@string/Clear_Tags"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="vertical">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/tv_Write_WriteData"/>

				<EditText
					android:id="@+id/tb_Write_WriteData"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/view_rectangle_morelist_gray"
					android:gravity="left|top"
					android:inputType="textMultiLine"
					android:focusable="true"
					android:focusableInTouchMode="true"
					android:maxLines="2"
					android:minLines="2"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="vertical">

				<Button
					android:id="@+id/btn_Write_WriteData"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:background="@drawable/button_orange"
					android:onClick="WirteData"
					android:text="@string/btn_Write_WriteData"/>

			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>