<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
              style="@style/UHFTheme"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="2dp"
              android:orientation="vertical">

    <TextView
        android:id="@+id/not_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/red"
        android:fontFamily="@font/cairo"
        android:gravity="center"
        android:text="@string/not_connected"
        android:textColor="@color/white"
        app:layout_anchor="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/_15sdp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_TitleTagID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="@string/List_TagID"/>

        <TextView
            android:id="@+id/tv_TitleTagCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/List_ReadCount"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_Main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lb_ReadTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/Tag_Time"/>

        <TextView
            android:id="@+id/lb_ReadSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/Tag_ReadTotalCount"/>

        <TextView
            android:id="@+id/lb_TagCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/Tag_Count"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sp_ReadType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:entries="@array/Array_ReadType"
            android:prompt="@string/Clear_Tags"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_Read"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.3"
            android:background="@drawable/button_blue"
            android:text="@string/btn_read"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>